- Fixed a bug where Wurt would get attacked by Pigmen without provoking them
- Fixed a bug where entering spectator mode while a match is starting in the Custom team mode would crash the server
- Players will no longer lose their day count when changing characters using /despawn

- Hearthsfire Crystals now do strong knockback if blown up through melee attacks
- Pyre Poker can no longer be parried
- Pig King will now throw out powerups and Hearthsfire Crystals
- Players will no longer need to hold the Force Attack control to attack other players
- Added new chat command /setstate /setcycle /setlook that lets Wormwood, Wurt and Wolfgang change their look. effect is purely cosmetic
- Wormwood no longer spawns in his blooming form (/setstate 4 will make him bloom)
- Wormwood will no longer make plants while blooming

v19.5
- Fixed a bug where victory by timeout would not announce a winner
- Fixed a bug that allowed dead players to win a match by timeout
- Fixed a bug that would announce the winner of a timeout as an FFA player despite being in a team
- Fixed a bug that allowed players to use /despawn during match preparation
- Fixed a bug that did not always save day count for despawning players
- Fixed a bug where player's /setlook choice was not saved between re-connections and server reloads
- Fixed a bug that caused the spectator spinner to appear targetting another player when it isn't

- Players in a team can now press T to open Team Chat, which will send messages only other members of your team can see
- Spectators can now use the spectator spinner (as it used to only be available for dead players)
- Other spectators can no longer be selected on the spectator spinner (only applies to ghosts; you can still watch another person's dead body if you want to)
- Wilson and Webber can now use /setlook to change their appearance
- Players marked as AFK will now enter spectator mode at the end of every match (so please only use /afk to stay in spectator mode)