@@ -38,6 +38,8 @@ v19.5
 - Fixed a bug where player's /setlook choice was not saved between re-connections and server reloads
 - Fixed a bug that caused the spectator spinner to appear targetting another player when it isn't
 
+- Reviving other players takes 2 seconds now, but the time it takes doubles every time a player is revived
+- Added the Telltale Heart, which can be equipped when reviving someone to reduce the revival time to 2 seconds at the cost of the revivee's health
 - Players in a team can now press T to open Team Chat, which will send messages only other members of your team can see
 - Spectators can now use the spectator spinner (as it used to only be available for dead players)
 - Other spectators can no longer be selected on the spectator spinner (only applies to ghosts; you can still watch another person's dead body if you want to)
